made field names for resource identifier and metadata source configurable
Ref https://gitlab.com/oersi/oersi-backend/-/issues/65